# web-hw-04

./: Dockerfile  error.html  index.html  main.py  message.html  pyproject.toml
storage/: data.json
