[tool.poetry]
name = "web-hw-04"
version = "0.1.0"
description = ""
authors = ["maxafanasiev <80445276+maxafanasiev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw_04"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
